gitops/rahoot/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rahoot
  labels:
    app: rahoot
