gitops/rahoot/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rahoot
  namespace: rahoot
spec:
  selector:
    app: rahoot
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
